@@ -13,55 +13,53 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-import org.springframework.http.HttpMethod; // ✅ ဒီ import ပါတာ သေချာပါစေ
+import org.springframework.http.HttpMethod;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-@Bean
-public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-    http
-        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-        .csrf(AbstractHttpConfigurer::disable)
-        .authorizeHttpRequests(auth -> auth
-            // ၁။ OPTIONS (Preflight) requests တွေကို အရင်ခွင့်ပြုမယ်
-            .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-            
-            // ၂။ API paths တွေကို ခွင့်ပြုမယ်
-            .requestMatchers("/api/ai/**").permitAll() 
-            .requestMatchers("/api/audio/**").permitAll() 
-            .requestMatchers("/error").permitAll()
-            
-            // ၃။ ကျန်တာတွေကိုလည်း လက်ရှိမှာ စမ်းသပ်ဖို့ ခွင့်ပြုထားမယ်
-            .anyRequest().permitAll()
-        );
-    return http.build();
-}
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(AbstractHttpConfigurer::disable)
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                .requestMatchers("/api/ai/**").permitAll()
+                .requestMatchers("/api/audio/**").permitAll()
+                .requestMatchers("/error").permitAll()
+                .anyRequest().permitAll()
+            );
+        return http.build();
+    }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // Allowed Origins သတ်မှတ်ခြင်း (Pattern အစား List နဲ့ သုံးကြည့်ပါ)
+
         configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000", 
-            "https://www.wintaibot.com", 
+            "http://localhost:3000",
+            "https://www.wintaibot.com",
             "https://wintaibot.com",
+            "https://wintkaythweaung.com",
+            "https://www.wintkaythweaung.com",
+            "https://main.dk6jk3fcod2l.amplifyapp.com",
+            "https://springai.pages.dev",
             "https://api.wintaibot.com"
         ));
-        
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", 
-        "Content-Type", 
-        "Accept", 
-        "X-Requested-With", 
-        "Origin")); // Headers အားလုံးကို လက်ခံရန်
-        configuration.setAllowCredentials(true);             // Cookies/Credentials ပါရင် လက်ခံရန်
+
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
+
+        // ✅ THIS WAS THE FIX — allow all headers so multipart/form-data works
+        configuration.setAllowedHeaders(List.of("*"));
+
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-    
 }
